fix some bugs after hiding navbar on mobiles

--- a/src/mobiles.scss
+++ b/src/mobiles.scss
@@ -22,7 +22,7 @@
 	margin-left: 0;
 	margin-right: 0;
 	margin-top: 0vh;
-	margin-bottom: 5vh;
+	margin-bottom: 0vh;
 
 	.page {
 		height: 95vh;
@@ -789,7 +789,7 @@
 	flex-direction: row;
 	height: 5vh;
 	width: 100vw;
-	z-index: 1;
+	z-index: 999;
 
 	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
